6-06-2025
- fix tmux sourcing issue with the dracula theme plugin


6-02-2025
- move nixos-update to shellScriptBin instead of a shellAlias for zsh


6-01-2025
- replace catpucchin tmux with dracula tmux
- add CPU RAM and battery modules to tmux
- removed old waybar themes
- prevent stylix from adding unnecessary css to waybar
- set environment variable NH_NO_CHECKS=1 as a temporary solution to "please enable nix-command and flakes" even if it is enabled
- update flake to linux 6.15
- resolved issues with nautilus and gvfs as a result of the flake update
- added dolphin as a filemanager option to nixos and HM through programs.dolphin.enable
- replace services.lact for the one in nixpkgs


5-28-2025
- add swayidle and hypridle
- swayidle is not compatable with hyprland
- hypridle is not compatable with sway
- each desktop will stop the other idle service if enabled at the same time
- add basic abstraction layers for each service for easily programmable idle times
- fix dpms on bug for multi-monitor setup in sway # https://github.com/swaywm/sway/issues/5101
- swww reloads again on both sway and hyprland reload - name of service changed
- utilize symlinkJoin instead of programs.zsh.shellAliases for both neovim vi and vim aliases
- also use symlinkJoin to remove dependency on zsh.shellAliases for fastfetch when image randomizer is used


5-27-2025
- add more profiles to home-manager
- add custom.wallpaper option to home-manager
- stylix is now inverted such that targets must be included rather than excluded
- update rmpc theme.ron
- set dbus-broker as the default dbus implementation for all systems
- fix logout button on waybar with hyprland


5-23-2025
- add gparted, zint, and glabels to programs
- remove default packages install by the programs.sway nixos option if home-manager is present
- add [ "--unsupported-gpu" ]; to programs.sway.extraOptions for nvidia gpus


5-21-2025
- massive update to the modules structure