@@ -1,6 +1,5 @@
 { self, inputs, pkgs, config, lib, ... }@args:
 let
-  keyFile = "/var/lib/sops-nix/keys.txt";
   cfg = config.modules.sops;
   inherit (lib) mkDefault mkIf mkEnableOption;
   hostName = if args ? hostName then args.hostName else "";
@@ -17,7 +16,7 @@ in
       defaultSopsFile = mkIf (hostName != "") (mkDefault (self + /hosts/${hostName}/secrets.yaml));
       defaultSopsFormat = "yaml";
       age = {
-        inherit keyFile;
+        keyFile = mkDefault "/var/lib/sops-nix/keys.txt";
       };
     };
   };
